--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,3 +43,28 @@ span {
     text-align: center;
     color: red;
 }
+.emial_color {
+    color: blue;
+}
+.button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.submit {
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+    color: white;
+    background-color: orange;
+    border: none;
+    margin-bottom: 20px;
+}
+.submit_re {
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+    color: orange;
+    background-color: white;
+    border: orange solid 1px;
+}
