--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: rgb(248, 226, 159);
+    margin: 0;
 }
 
 .form_row,
@@ -12,44 +13,49 @@ body {
     margin: 20px 0;
     height: 30px;
 }
+
 .form_row p,
 .name p,
 .gender p {
     width: 200px;
     margin: 0 20px 0 0;
 }
+
 .form_row input {
     height: 20px;
     width: 400px;
 }
+
 label {
     margin: auto 0;
 }
+
 span {
     margin: auto 10px;
 }
-#confirm {
-    text-align: center;
-}
-#confirm input {
-    background-color: rgb(255, 191, 0);
-    border-radius: 10px;
-    border: none;
-    width: 200px;
-    height: 50px;
-    color: white;
-}
+
 .error {
     text-align: center;
     color: red;
 }
+
 .emial_color {
     color: blue;
 }
+
 .button {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.button a {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+
 }
 .submit {
     width: 200px;
@@ -60,6 +66,7 @@ span {
     border: none;
     margin-bottom: 20px;
 }
+
 .submit_re {
     width: 200px;
     height: 50px;
@@ -67,4 +74,44 @@ span {
     color: orange;
     background-color: white;
     border: orange solid 1px;
+}
+
+/* ヘッダー */
+header {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 50px;
+    padding-top: 10px;
+    background-color: orange;
+}
+
+header a {
+    border: black solid 1px;
+    width: 130px;
+    height: 30px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    padding-top: 10px;
+    margin-right: 20px;
+}
+
+.login_header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 50px;
+    padding-top: 10px;
+    background-color: orange;
+}
+
+.login_header p {
+    margin-left: 20px;
+}
+
+/* ログイン画面 */
+.forget_pass {
+    text-decoration: none;
+    color: blue;
 }
